--- a/harutya-project/harutya-dota2-omg/pom.xml
+++ b/harutya-project/harutya-dota2-omg/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>harutya-dota2omg</artifactId>
+    <artifactId>harutya-dota2-omg</artifactId>
 
     <dependencies>
         <dependency>
